force-app/main/default/objects/AR_GL_Account__c/fields/AR_YardiGL_Account__c.field-meta.xml
<CustomField>
    <fullName>AR_YardiGL_Account__c</fullName>
    <label>AR YardiGL Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>