force-app/main/default/objects/AR_GL_Account__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unidentified Receipts</fullName>
            </value>
            <value>
                <fullName>Unapplied Receipts</fullName>
            </value>
            <value>
                <fullName>Default Account Receivable</fullName>
            </value>
            <value>
                <fullName>Default Account Receivable - NaM</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>