force-app/main/default/objects/AR_GL_Account__c/fields/Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance__c</fullName>
    <formula>Balance__c +  Debit__c - Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ending Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>