force-app/main/default/objects/AR_GL_Account__c/fields/FA_Land_Subtype__c.field-meta.xml
<CustomField>
    <fullName>FA_Land_Subtype__c</fullName>
    <label>Land Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FA_Land_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Land_Subtype</valueSetName>
    </valueSet>
</CustomField>