force-app/main/default/objects/AR_GL_Account__c/fields/FA_Land_Type__c.field-meta.xml
<CustomField>
    <fullName>FA_Land_Type__c</fullName>
    <label>Land Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Land_Type</valueSetName>
    </valueSet>
</CustomField>