force-app/main/default/objects/AR_GL_Account__c/fields/Fusion_Code__c.field-meta.xml
<CustomField>
    <fullName>Fusion_Code__c</fullName>
    <label>Fusion Code</label>
    <type>Time</type>
</CustomField>