force-app/main/default/objects/AR_GL_Account__c/fields/GL_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>GL_Type_Description__c</fullName>
    <label>GL Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>