force-app/main/default/objects/AR_GL_Account__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>AR_Legal_Entity__c</referenceTo>
    <relationshipName>GL_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>