force-app/main/default/objects/AR_GL_Account__c/fields/UniqueCode__c.field-meta.xml
<CustomField>
    <fullName>UniqueCode__c</fullName>
    <displayFormat>GL-{00000}</displayFormat>
    <label>Unique Code</label>
    <type>AutoNumber</type>
</CustomField>