force-app/main/default/objects/AR_GL_Account__c/fields/Yardi_GlCode__c.field-meta.xml
<CustomField>
    <fullName>Yardi_GlCode__c</fullName>
    <externalId>true</externalId>
    <label>Yardi GlCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>